# 2048

./: .gitignore  CMakeLists.txt  GUIDE_2048_GLFW.md
src/: App.cpp  App.hpp  Board.cpp  Board.hpp  Direction.hpp  Game.cpp  Game.hpp  Input.cpp  Input.hpp  Renderer.cpp  Renderer.hpp  main.cpp  tile.frag  tile.vert
